# templates

./: .gitmodules  LICENSE  README.md  nf
c/: CMakeLists.txt
c/cmake/: toolchain.cmake
c/src/: CMakeLists.txt  app.c  main.c
c/src/sys/: log.c  log.h
c/tests/basic/: CMakeLists.txt  basic.c
cpp/: CMakeLists.txt  install.py
cpp/cmake/: toolchain.cmake
cpp/src/: CMakeLists.txt  app.cpp  log.cpp  log.hpp  main.cpp
cpp/tests/: CMakeLists.txt  test_module.cpp
html/: Makefile  package-lock.json  package.json  tsconfig.json  webpack.config.js
html/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
html/src/: index.html  index.ts
html2/: gruntfile.js  main.css  package.json  todo.nf
html2/src/: index.pug
html2/src/script/: index.ts
html2/src/style/: _elems.scss  _utils.scss  _vars.scss  index.scss
html2/src/style/elems/: _boxes.scss  _buttons.scss  _fonts.scss  _heading.scss  _text.scss
html2/src/style/lib/font-awesome/: LICENSE
html2/src/style/vars/: _colors.scss  _fonts.scss  _sizes.scss  _text.scss
html2/src/template-utils/: ie_support.html
poly/: main.tex  mst-poly.cls
poly/tex/: backpage.tex  colors.tex  commands.tex  frontpage.tex
polydoc/: Makefile  main.md
simple_jack/: CMakeLists.txt
simple_jack/cmake/: toolchain.cmake  tools.cmake
simple_jack/lib/: CMakeLists.txt
simple_jack/src/: CMakeLists.txt  app.cpp  audio.cpp  audio.hpp  log.cpp  log.hpp
simple_jack/tests/: main.cpp
test/: install.py
vuejs-advanced/: README.md  index.pug  package.json  webpack.config.js
vuejs-advanced/config/: files.js  path.js  webpack.common.js  webpack.dev.js  webpack.prod.js
vuejs-advanced/src/: App.vue  main.js
vuejs-advanced/src/pages/: home.vue
vuejs-simple/: Makefile  index.html  install.py  package.json  webpack.config.js
vuejs-simple/config/: config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
vuejs-simple/src/: App.vue
vuejs-simple/src/config/: router.js
vuejs-simple/src/config/style/: index.scss
